force-app/main/default/objects/Prospero_School_Term__mdt/Prospero_School_Term__mdt.object-meta.xml
<CustomObject>
    <description>To automate the setting of the School Term and Academic Year picklists on Shifts and Perm Placements</description>
    <label>Prospero School Term</label>
    <pluralLabel>Prospero School Terms</pluralLabel>
</CustomObject>