force-app/main/default/objects/Prospero_School_Term__mdt/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <description>ust exactly match the API value of the respective Academic Year picklist value</description>
    <label>Academic Year</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>