force-app/main/default/objects/Prospero_School_Term__mdt/fields/School_Term__c.field-meta.xml
<CustomField>
    <fullName>School_Term__c</fullName>
    <description>Must exactly match the API value of the respective School Term picklist value</description>
    <label>School Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>