force-app/main/default/objects/Prospero_School_Term__mdt/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <description>Last date of the term (inclusive)</description>
    <label>Term End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>