force-app/main/default/objects/Prospero_School_Term__mdt/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <description>First date of the term (inclusive)</description>
    <label>Term Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>